# swagger.json
@@ -20,7 +20,7 @@
           {
             "name": "page",
             "in": "query",
-            "description": "페이지 정보, default 1",
+            "description": "페이지 정보 1이상의 정수, default 1",
             "schema": {
               "type": "number",
               "nullable": false
@@ -39,9 +39,12 @@
               }
             },
             "x-nestia-encrypted": false
+          },
+          "400": {
+            "description": "Value of the URL query 'page' is invalid."
           }
         },
-        "description": "상품 목록 조회 API\n\n전체 상품 목록 조회\n\n나중에 필터링 기준, 정렬 기준 추가할 것",
+        "description": "상품 목록 조회 API\n\n전체 상품 목록 조회",
         "x-nestia-namespace": "products.findMany",
         "x-nestia-jsDocTags": [
           {
@@ -65,7 +68,7 @@
                 "kind": "space"
               },
               {
-                "text": "페이지 정보, default 1",
+                "text": "페이지 정보 1이상의 정수, default 1",
                 "kind": "text"
               }
             ]
@@ -75,6 +78,15 @@
             "text": [
               {
                 "text": "페이지 정보와 함께 요청한 상품 목록",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "400 Value of the URL query 'page' is invalid.",
                 "kind": "text"
               }
             ]
@@ -100,8 +112,21 @@
         },
         "responses": {
           "201": {
-            "description": "",
+            "description": "생성한 상품 상세 정보",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/IProduct.Detail"
+                }
+              }
+            },
             "x-nestia-encrypted": false
+          },
+          "400": {
+            "description": "{property} type is invalid."
+          },
+          "403": {
+            "description": "권한이 없습니다."
           }
         },
         "description": "상품 생성 요청 API",
@@ -132,13 +157,51 @@
                 "kind": "text"
               }
             ]
+          },
+          {
+            "name": "returns",
+            "text": [
+              {
+                "text": "생성한 상품 상세 정보",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "400 잘못된 토큰입니다.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "400 {property} type is invalid.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "403 권한이 없습니다.",
+                "kind": "text"
+              }
+            ]
           }
         ]
       }
     },
     "/products/{product_id}": {
       "get": {
-        "tags": [],
+        "tags": [
+          "product"
+        ],
         "parameters": [
           {
             "name": "product_id",
@@ -153,7 +216,7 @@
         ],
         "responses": {
           "200": {
-            "description": "",
+            "description": "상품 상세 정보",
             "content": {
               "application/json": {
                 "schema": {
@@ -162,11 +225,23 @@
               }
             },
             "x-nestia-encrypted": false
+          },
+          "404": {
+            "description": "일치하는 대상을 찾지 못했습니다."
           }
         },
         "description": "상품 상세 조회 API",
         "x-nestia-namespace": "products.findOne",
         "x-nestia-jsDocTags": [
+          {
+            "name": "tag",
+            "text": [
+              {
+                "text": "product",
+                "kind": "text"
+              }
+            ]
+          },
           {
             "name": "param",
             "text": [
@@ -180,6 +255,24 @@
               },
               {
                 "text": "대상 상품 고유 번호",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "returns",
+            "text": [
+              {
+                "text": "상품 상세 정보",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "404 일치하는 대상을 찾지 못했습니다.",
                 "kind": "text"
               }
             ]
@@ -218,6 +311,15 @@
           "201": {
             "description": "",
             "x-nestia-encrypted": false
+          },
+          "400": {
+            "description": "{property} type is invalid."
+          },
+          "403": {
+            "description": "권한이 없습니다."
+          },
+          "404": {
+            "description": "일치하는 대상을 찾지 못했습니다."
           }
         },
         "description": "상품 수정 요청 API",
@@ -265,6 +367,42 @@
                 "kind": "text"
               }
             ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "400 잘못된 토큰입니다.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "400 {property} type is invalid.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "403 권한이 없습니다.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "404 일치하는 대상을 찾지 못했습니다.",
+                "kind": "text"
+              }
+            ]
           }
         ]
       },
@@ -288,6 +426,15 @@
           "200": {
             "description": "",
             "x-nestia-encrypted": false
+          },
+          "400": {
+            "description": "잘못된 토큰입니다."
+          },
+          "403": {
+            "description": "권한이 없습니다."
+          },
+          "404": {
+            "description": "일치하는 대상을 찾지 못했습니다."
           }
         },
         "description": "상품 삭제(비활성화) 요청 API",
@@ -315,6 +462,33 @@
               },
               {
                 "text": "대상 상품 고유 번호",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "400 잘못된 토큰입니다.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "403 권한이 없습니다.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "404 일치하는 대상을 찾지 못했습니다.",
                 "kind": "text"
               }
             ]
